# PaddleOCR-deployA

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cli/: CMakeLists.txt  config.ini  helper.cpp  helper.hpp  iniparser.hpp  ppocra.cpp
cmake/: FetchPaddleDependencies.cmake  FetchVersion.cmake
lib/: CMakeLists.txt  paddle_infer.hpp
lib/src/: .clang-tidy  CMakeLists.txt  ocr_cls.h  ocr_det.h  ocr_rec.cpp  ocr_rec.h  paddleocr.cpp  paddleocr.hpp  postprocess_op.h  preprocess_op.cpp  utility.cpp
paddle_infer/: CMakeLists.txt  paddle_infer.hpp
paddle_infer/src/: CMakeLists.txt  args.cpp  args.h  main.cpp  ocr_cls.cpp  ocr_cls.h  ocr_det.cpp  ocr_det.h  ocr_rec.cpp  ocr_rec.h  paddleocr.cpp  paddleocr.h  paddlestructure.cpp  postprocess_op.cpp  postprocess_op.h  preprocess_op.cpp  preprocess_op.h  utility.cpp  utility.h  utility.hpp
